grille photos des equipes + credits

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="content">
             <div class="button_container">
                     <img src="https://nsi-corneille.github.io/ressources/images/fond_page_acceuil_jeu1.jpg" alt="img accueil1" class="accueil_img1">                <button class="D_Button">
-                    <a href="https://drive.google.com/drive/folders/12si_UR0_i3u_uAzWbMU1CdjPHmsl12ld?usp=sharing">Télécharger v1</a>
+                    <a href="https://drive.google.com/file/d/1FJm1hZkxMFunxUrgZcXvMFa1KTuiwiqo/view">Télécharger v1</a>
                 </button>
             </div>
             <a id="histoire"></a>
@@ -85,8 +85,12 @@
               ARMAND Sechon  MASMOUDI Yanis  LEMESLE Nathan  PAVLOVA Alexandre<br> -------------------------------
               <br>
               <div class="grille">
-
+                <img src="https://nsi-corneille.github.io/ressources/images/equipe1.jpg">
+                <img src="https://nsi-corneille.github.io/ressources/images/equipe2.jpg">
+                <img src="https://nsi-corneille.github.io/ressources/images/equipe3.jpg">
+                <img src="https://nsi-corneille.github.io/ressources/images/equipe4.jpg">
               </div>
+              <br>
               Sous la direction générale de Steeve PYTEL
             </div>
             <a id="credits"></a>
@@ -96,12 +100,12 @@
             <div class="credits">
               <h1>Crédits</h1>
                 <h2>Liens utilisés</h2>
-                <li><br>Pygame: https://www.pygame.org/</li>
-                <li><br>Python: https://www.python.org/ </li>
-                <br>
-                <li>Pygame: https://www.pygame.org/</li>
-                <li>Python: https://www.python.org/ </li>
-                <br><h1>Amusez-vous !</h1>
+                <br>Pygame: https://www.pygame.org/
+                <br><br>Python: https://www.python.org/
+                <br><br>
+                Pygame: https://www.pygame.org/
+                <br><br>Python: https://www.python.org/
+                <br><br><h1>Amusez-vous !</h1>
             </div>
             <img src="https://nsi-corneille.github.io/ressources/images/fond_page_acceuil_jeu2.jpg" alt="img accueil2" class="accueil_img2">
         </div>
